--- a/ProgramGenerics/ProgramGenerics.csproj
+++ b/ProgramGenerics/ProgramGenerics.csproj
@@ -43,6 +43,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="FindMaxFloatValue.cs" />
     <Compile Include="FindMaxintValue.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
