Find Max String UC3_FindMaxString

--- a/ProgramGenerics/ProgramGenerics.csproj
+++ b/ProgramGenerics/ProgramGenerics.csproj
@@ -45,6 +45,7 @@
   <ItemGroup>
     <Compile Include="FindMaxFloatValue.cs" />
     <Compile Include="FindMaxintValue.cs" />
+    <Compile Include="FindMaxString.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
